Fix bubble text alignment

--- a/rooted/app/assets/stylesheets/senses.scss
+++ b/rooted/app/assets/stylesheets/senses.scss
@@ -9,50 +9,50 @@
   background-image: linear-gradient(151deg, #ad6bff, #74bcf7);
 }
 
-@-webkit-keyframes animateBubble {
-    0% {
-        margin-top: 1000px;
-    }
-    100% {
-        margin-top: -100%;
-    }
-}
+// @-webkit-keyframes animateBubble {
+//     0% {
+//         margin-top: 1000px;
+//     }
+//     100% {
+//         margin-top: -100%;
+//     }
+// }
 
-@-moz-keyframes animateBubble {
-    0% {
-        margin-top: 1000px;
-    }
-    100% {
-        margin-top: -100%;
-    }
-}
+// @-moz-keyframes animateBubble {
+//     0% {
+//         margin-top: 1000px;
+//     }
+//     100% {
+//         margin-top: -100%;
+//     }
+// }
 
 @keyframes animateBubble {
     0% {
         margin-top: 1000px;
     }
     100% {
-        margin-top: -100%;
+        margin-top: 0%;
     }
 }
 
-@-webkit-keyframes sideWays {
-    0% {
-        margin-left:0px;
-    }
-    100% {
-        margin-left:50px;
-    }
-}
+// @-webkit-keyframes sideWays {
+//     0% {
+//         margin-left:0px;
+//     }
+//     100% {
+//         margin-left:50px;
+//     }
+// }
 
-@-moz-keyframes sideWays {
-    0% {
-        margin-left:0px;
-    }
-    100% {
-        margin-left:50px;
-    }
-}
+// @-moz-keyframes sideWays {
+//     0% {
+//         margin-left:0px;
+//     }
+//     100% {
+//         margin-left:50px;
+//     }
+// }
 
 @keyframes sideWays {
     0% {
@@ -68,9 +68,9 @@
 .x1 {
   // -webkit-animation: animateBubble 25s linear infinite, sideWays 2s ease-in-out infinite alternate;
   // -moz-animation: animateBubble 25s linear infinite, sideWays 2s ease-in-out infinite alternate;
-  animation: animateBubble 25s linear infinite, sideWays 2s ease-in-out infinite alternate;
+  animation: animateBubble 25s linear, sideWays 2s ease-in-out infinite alternate;
 
-  left: -5%;
+  left: 5%;
   top: 5%;
 
   -webkit-transform: scale(0.6);
@@ -91,6 +91,13 @@
 
   height: 200px;
   width: 200px;
+  display: flex;
+  justify-content: center;
+}
+
+.title {
+  align-self: center;
+  z-index: 1;
 }
 
 .bubble:after {
